kücük buglar giderildi

--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Doğru : 0"
+        android:text="True : 0"
         android:textColor="#F44336"
         android:textSize="20dp"
         app:layout_constraintEnd_toStartOf="@+id/falseText"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Yanlış : 0"
+        android:text="False : 0"
         android:textColor="#F44336"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
