--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="117dp"
         android:fontFamily="sans-serif-condensed-medium"
-        android:text="Soru :"
+        android:text="Question  :"
         android:textColor="#F44336"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
